--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,13 @@
 !/log/.keep
 !/tmp/.keep
 
+/elm-stuff
 /node_modules
 /yarn-error.log
 
 .byebug_history
 /public/packs
+/elm-stuff
 /node_modules
 /tmp
 /public
